# webserver

./: .gitignore  Cargo.toml
.github/workflows/: main.yml
examples/headers/: index.html  main.rs  webconfig.toml
examples/local/: index.html  main.rs  webconfig.toml
examples/local/www/: index.html  webconfig.toml
examples/local/www/apps/: build.json
examples/plugins/: index.html  webconfig.toml
examples/proxy/: main.rs
examples/server/: webconfig.toml
src/: api.rs  cli.rs  config.rs  db.rs  errors.rs  layers.rs  lib.rs  main.rs  plugins.rs
test-site/: index.html
