[package]
name = "webserver"
version = "0.1.1"
edition = "2024"

[[bin]]
path="src/main.rs"
name="iceserver"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws"] }
axum-proxy = { version = "0.6.0", features = ["axum", "https"] }
clap = { version = "4.5.53", features = ["derive"] }
expand-env-vars = "0.1.0"
libloading = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.7", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
hyper = { version = "0.14", features = ["full"] }
notify = { version = "8.2.0", features = ["macos_fsevent"] }
tokio-stream = "0.1.18"
axum-extra = { version = "0.12.5", features = ["typed-header"] }

[profile.dev]
debug = true

[profile.release]
debug = false
